k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 11-team-patentflow-postgres-svc
  namespace: patentflow
spec:
  type: ClusterIP
  selector:
    app: 11-team-patentflow-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
