k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team11-patentflow-redis-svc
  namespace: patentflow
spec:
  type: ClusterIP
  selector:
    app: team11-patentflow-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
