k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team11-patentflow-be-svc
  namespace: patentflow
spec:
  type: ClusterIP
  selector:
    app: team11-patentflow-be
  ports:
    - name: http
      port: 80
      targetPort: http
